# textdiffuse

./: .gitignore  main.py  pyproject.toml
scripts/: download_tiny_shakespeare.sh
src/: data.py  diff_utils.py  model.py  triton_attention.py
tests/: test_triton_attention.py
