[project]
name = "textdiffuse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "torch==2.8.0",
    "wandb>=0.17",
    "tiktoken>=0.6.0",
    "requests>=2.32.3",
    "pyarrow>=16.1.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
